<resources>
    <string name="app_name">Smart Dictionary</string>
    <string name="enter_the_word_here">Enter the word here</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="translator">translator</string>
    <string name="add_word">Add Word</string>
    <string name="arabic">Arabic</string>
    <string name="persian">Persian</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="title_new_word">New Word</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="edit_word">Edit Word</string>
    <string name="action_bar_subtitle">Number Of Words: %d</string>
    <string name="title_of_share">Check this Word Out!!!</string>
    <string name="word_share_massage">Here\'s the meaning of the word i found:\n
        Persian: %1$s\n
        Arabic: %2$s\n
        English :%3$s\n
        French: %4$s
    </string>
    <string name="words_data">Words Data</string>
    <string name="change_language">Change Language</string>
    <string-array name="languages_array">
        <item>Persian</item>
        <item>Arabic</item>
        <item>French</item>
        <item>English</item>
    </string-array>
</resources>

