<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_persian"
        android:layout_width="190dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/text_layout_arabic"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_persian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/persian" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_arabic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_layout_persian"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_arabic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/arabic" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_french"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/text_layout_persian"
        app:layout_constraintStart_toStartOf="@+id/text_layout_persian"
        app:layout_constraintTop_toBottomOf="@+id/text_layout_persian">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_french"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/french" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_english"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/text_layout_arabic"
        app:layout_constraintStart_toStartOf="@+id/text_layout_arabic"
        app:layout_constraintTop_toBottomOf="@+id/text_layout_arabic">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/english" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>